Standarizacion de controlador  inventario. Codigo limpio. Documentación.